--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.0",
-	"appid": "wxcfcd8fa9ca6f5b8f",
+	"appid": "wx531fb60f22fb1c33",
 	"projectname": "jisuanqi",
 	"debugOptions": {
 		"hidedInDevtools": []
